syntax = "proto3";

option go_package = "./pb";

package pb;

message GenerateTokenReq {
  uint64 userId = 1;
}
message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}


message ClearTokenReq {
  uint64 userId = 1;
}
message ClearTokenResp {
  bool ok = 1;
}


message ValidateTokenReq {
  uint64 userId = 1;
  string token = 2;
}
message ValidateTokenResp {
  uint64 userId = 1;
  bool ok = 2;
}

service auth {
  // 生成token，只针对用户服务开放访问
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
  // 清除token，只针对用户服务开放访问
  rpc clearToken(ClearTokenReq) returns(ClearTokenResp);
  // 验证Token ，只很对用户服务、授权服务api开放
  rpc validateToken(ValidateTokenReq) returns(ValidateTokenResp);
}
